Creado mediante Colaboratory

--- a/Quiz 3/dbenitezc_quiz3.ipynb
+++ b/Quiz 3/dbenitezc_quiz3.ipynb
@@ -2174,7 +2174,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "El anterior diagrama de torta nos muestra la proporción entre pasajeros que sobrevivierion y aquellos que murieron. Se observa que solo el 38.4% de los pasajeros sobrevivieron al desastre."
+        "The above pie diagram shows us the ratio between passengers who survived and those who died. It is observed that only 38.4% of the passengers survived the disaster."
       ],
       "metadata": {
         "id": "P37zx6qFoi5l"
@@ -2220,7 +2220,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "El anterior diagrama nos muestra la distrivución de edades abordo del Titanic, se observa que la mayor concentración de edades está entre los 20 y los 30 años de edad."
+        "The previous diagram shows us the distribution of ages on board the Titanic, it is observed that the highest concentration of ages is between 20 and 30 years of age.\n"
       ],
       "metadata": {
         "id": "N2pO6BDYo1_q"
@@ -2266,7 +2266,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En el anterior diagrama de mosaico vemos que si dividimos por sexo, en proporción un mayor numero de las mujeres que abordó el Titanic, sobrevivió que en el caso de los hombres donde la gran mayoria de estos murió."
+        "In the previous mosaic diagram we see that if we divide by sex, a proportionately greater number of women who boarded the Titanic survived than in the case of men where the vast majority of these died."
       ],
       "metadata": {
         "id": "ihoq6cpIpayO"
@@ -2309,7 +2309,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En el anterior diagrama de mosaico se observa la relación entre la clase de pasajero (primera, segunda o tercera clase) y la supervivencia de los mismos, en este caso vemos que siendo un pasajero de primera clase tuvo más chance de sobrevivir que la segunda y tercera clase, a pesar de que la mayoria de pasajeros era de tercera clase, esto nos muestra que muy probablemente se tuvo en cuenta el estatus social a la hora de abordar las balsas de escape."
+        "In the previous mosaic diagram we can see the relationship between the class of passenger (first, second or third class) and their survival, in this case we see that being a first class passenger had a better chance of surviving than the second and third class, despite the fact that the majority of passengers were third class, this shows us that social status was most likely taken into account when boarding the escape rafts."
       ],
       "metadata": {
         "id": "CDyATRfJqSTP"
@@ -2352,7 +2352,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En el anterior diagrama de mosaico se puede evidenciar la proporción de muertos y sobrevivientes según su puerto de embarque, entonces mientras vemos que la mayoria de pasajeros embarcaron en Southampton, en promedio era más probable que un pasajero que embarcó en Cherbourg sobreviviera."
+        "In the mosaic diagram above you can see the ratio of deaths and survivors according to their port of embarkation, so while we see that the majority of passengers boarded in Southampton, on average a passenger who boarded in Cherbourg was more likely to survive."
       ],
       "metadata": {
         "id": "JUYN5X13q5Up"
