--- a/Lab 4/dbenitezc_lab4.ipynb
+++ b/Lab 4/dbenitezc_lab4.ipynb
@@ -36,6 +36,26 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "My last digit ID: 4\n",
+        "\n",
+        "My own polynomial degree 10"
+      ],
+      "metadata": {
+        "id": "Y3Ov86jEhrCb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dZQXDsp3hqpr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "2U0fAIf5G4rR"
       },
