--- a/Lab 4/dbenitezc_lab4.ipynb
+++ b/Lab 4/dbenitezc_lab4.ipynb
@@ -37,9 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "My last digit ID: 4\n",
-        "\n",
-        "My own polynomial degree 10"
+        "My last digit ID: 4\n"
       ],
       "metadata": {
         "id": "Y3Ov86jEhrCb"
